# deepvm

./: .gitignore  CMakeLists.txt  README.md  deep_interp.cpp  my_loader.cpp  program.wasm
 .github/workflows/: ci.yml
.github/workflows/: ci.yml
Test/: case  test.py  testList.txt
Test/add0001/: add0001.out  add0001.wasm  add00010.wasm  add0002.wasm  add0003.wasm  add0004.wasm  add0005.wasm  add0006.wasm  add0007.wasm  add0008.wasm  add0009.wasm
Test/divs0001/: divs0001.wasm
Test/mul0001/: mul0001.wasm
Test/sub0001/: sub0001.wasm
doc/: deep_loader.md  deepvm_builtin_api.md  deepvm_wasm_linux.md  deepvm_wasm_sections.md  deepvm_windows.md  flow_control.md  interp.md
example/: example.cpp  example.wasm  test.wasm
include/: deep_interp.h  deep_loader.h  deep_log.h  deep_mem.h  deep_opcode.h  interp.h  opcode.h  random.h
interpreter/: interp.cpp  interp.h  opcode.h  readme.md
interpreter/Example/: example.cpp
loader/: deep_loader.cpp
src/: deep_interp.c  deep_interp.cpp  deep_loader.c  deep_loader.cpp  deep_log.c  deep_main.c  deep_mem.c  deep_opcode.c  xoroshiro128plus.c
src/include/: deeploader.h
test/: test.py
test/builtin/: builtin_putd_00001.wasm  builtin_putd_00001.wat  builtin_putf_00001.wasm  builtin_puti_00001.wasm  builtin_putl_00001.wasm  builtin_puts_00001.wasm  case_spec.md
test/control/: case_spec.md  if_001.wasm  if_002.wasm  loop_001.wasm  loop_002.wasm  proper_loop1.wasm  switch_case_001.wasm  tri_if_001.wasm  tri_if_002.wasm
test/math/: a.wat  add_float64_0_-9.1201.wasm  add_float64_10.2_-8.1.wasm  add_float64_12.3_3.85.wasm  (+63 more)
(+34 files in other folders)
