cmake_minimum_required(VERSION 3.0.0)
project(deepvm VERSION 0.1.0)

# include(CTest)
# enable_testing()
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_BUILD_TYPE Debug)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
add_executable(deepvm ${DIR_SRCS})